--- a/index.html
+++ b/index.html
@@ -65,6 +65,13 @@
                 Xihan.Bian@xjtlu.edu.cn
               </a>
             </p>
+              <a target="_blank" href="assets/corl_paper.pdf"
+                                        class="external-link button is-normal is-rounded is-dark">
+                                        <span class="icon">
+                                            <i class="fas fa-file-pdf"></i>
+                                        </span>
+                                        <span><b>PDF</b></span>
+                </a>
           </div>
   
         </div>
