--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
               <video controls muted loop>
                 <source src="videos/netural.mp4" type="video/mp4">
               </video>
-              <p class="video-caption">RsSIn-HR(Ours) Generated Gesture</p>
+              <p class="video-caption">ReSIn-HR(Ours) Generated Gesture</p>
             </div>
           </div>
         </div>
@@ -194,7 +194,7 @@
               <video controls muted loop>
                 <source src="videos/happy.mp4" type="video/mp4">
               </video>
-              <p class="video-caption">RsSIn-HR(Ours) Generated Gesture</p>
+              <p class="video-caption">ReSIn-HR(Ours) Generated Gesture</p>
             </div>
           </div>
         </div>
@@ -218,7 +218,7 @@
               <video controls muted loop>
                 <source src="videos/fearful.mp4" type="video/mp4">
               </video>
-              <p class="video-caption">RsSIn-HR(Ours) Generated Gesture</p>
+              <p class="video-caption">ReSIn-HR(Ours) Generated Gesture</p>
             </div>
           </div>
         </div>
