--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 Xihan.Bian@xjtlu.edu.cn
               </a>
             </p>
-              <a target="_blank" href="assets/corl_cyr_4.10.pdf"
+              <a target="_blank" href="assets/ReSIn-HR.pdf"
                                         class="external-link button is-normal is-rounded is-dark">
                                         <span class="icon">
                                             <i class="fas fa-file-pdf"></i>
