--- a/index.html
+++ b/index.html
@@ -65,13 +65,15 @@
                 Xihan.Bian@xjtlu.edu.cn
               </a>
             </p>
-              <a target="_blank" href="assets/ReSIn-HR.pdf"
-                                        class="external-link button is-normal is-rounded is-dark">
-                                        <span class="icon">
-                                            <i class="fas fa-file-pdf"></i>
-                                        </span>
-                                        <span><b>PDF</b></span>
-                </a>
+            
+            <a target="_blank" href="assets/ReSIn-HR.pdf"
+   class="external-link button is-normal is-rounded is-dark"
+   style="color: white;">
+    <span class="icon">
+        <i class="fas fa-file-pdf"></i>
+    </span>
+    <span><b>PDF</b></span>
+</a>
           </div>
   
         </div>
