--- a/index.html
+++ b/index.html
@@ -67,13 +67,17 @@
             </p>
             
             <a target="_blank" href="assets/ReSIn-HR.pdf"
-   class="external-link button is-normal is-rounded is-dark"
-   style="color: white;">
-    <span class="icon">
+            class="external-link button is-normal is-rounded is-dark"
+            style="color: white;">
+             <span class="icon">
         <i class="fas fa-file-pdf"></i>
     </span>
     <span><b>PDF</b></span>
 </a>
+            a.external-link.button.is-dark:hover {
+    background-color: #333;
+    color: #fff;
+}
           </div>
   
         </div>
