--- a/index.html
+++ b/index.html
@@ -74,15 +74,22 @@
     </span>
     <span><b>PDF</b></span>
 </a>
-            a.external-link.button.is-dark:hover {
-    background-color: #333;
-    color: #fff;
-}
+  
           </div>
   
         </div>
       </div>
     </div>
+    <style>
+  a.external-link.button.is-dark {
+    color: white !important;
+  }
+
+  a.external-link.button.is-dark:hover {
+    background-color: #333;
+    color: #fff !important;
+  }
+</style>
   </section>
   
   <section class="section">
