--- a/index.html
+++ b/index.html
@@ -65,7 +65,10 @@
                 Xihan.Bian@xjtlu.edu.cn
               </a>
             </p>
-            
+
+            <div class="column has-text-centered">
+            <div class="publication-links">
+            <span class="link-block">
             <a target="_blank" href="assets/ReSIn-HR.pdf"
             class="external-link button is-normal is-rounded is-dark"
             style="color: white;">
@@ -74,22 +77,17 @@
     </span>
     <span><b>PDF</b></span>
 </a>
+                           </span>
+                            </div>
+
+                        </div>
+                    </div>
   
           </div>
   
         </div>
       </div>
     </div>
-    <style>
-  a.external-link.button.is-dark {
-    color: white !important;
-  }
-
-  a.external-link.button.is-dark:hover {
-    background-color: #333;
-    color: #fff !important;
-  }
-</style>
   </section>
   
   <section class="section">
