--- a/index.html
+++ b/index.html
@@ -44,10 +44,12 @@
     <div class="hero-body">
       <div class="columns is-centered">
         <div class="column has-text-centered">
+
+          <!-- Title -->
           <h1 class="title is-2" style="font-weight: bold; font-family: 'Noto Sans', sans-serif;">
             Real-Time Synchronized Interaction Framework for Emotion-Aware Humanoid Robots
           </h1>
-  
+
           <!-- Author Info -->
           <div class="is-size-5 publication-authors" style="margin-top: 1.5rem;">
             <p><strong>Author:</strong> Yanrong Chen</p>
@@ -57,7 +59,7 @@
                 Yanrong.Chen21@student.xjtlu.edu.cn
               </a>
             </p>
-  
+
             <p style="margin-top: 1.5rem;"><strong>Supervisor:</strong> Xihan Bian</p>
             <p>
               <a href="mailto:Xihan.Bian@xjtlu.edu.cn">
@@ -65,30 +67,30 @@
                 Xihan.Bian@xjtlu.edu.cn
               </a>
             </p>
-
-            <div class="column has-text-centered">
-            <div class="publication-links">
-            <span class="link-block">
-            <a target="_blank" href="assets/ReSIn-HR.pdf"
-            class="external-link button is-normal is-rounded is-dark"
-            style="color: white;">
-             <span class="icon">
-        <i class="fas fa-file-pdf"></i>
-    </span>
-    <span><b>PDF</b></span>
-</a>
-                           </span>
-                            </div>
-
-                        </div>
-                    </div>
-  
           </div>
-  
+
+          <!-- PDF Link -->
+          <div class="column has-text-centered">
+            <div class="publication-links">
+              <span class="link-block">
+                <a target="_blank" href="assets/ReSIn-HR.pdf"
+                   class="external-link button is-normal is-rounded is-dark"
+                   style="color: white;">
+                  <span class="icon">
+                    <i class="fas fa-file-pdf"></i>
+                  </span>
+                  <span><b>PDF</b></span>
+                </a>
+              </span>
+            </div>
+          </div>
+
         </div>
       </div>
     </div>
   </section>
+
+
   
   <section class="section">
     <div class="container is-max-desktop">
