--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
       <div class="row is-full-width">
         <h2 class="title is-4"><span class="dvima">Failures and Limitations</span></h2>
         <p style="font-size: 1.05rem;">
-          Below are some failure cases of our policy. In these cases, the robot lost stability due to center-of-mass shifts when swinging arms or stepping too far. This highlights the importance of integrating balance control during dynamic gesture execution.Future work will explore personalization, latency reduction, and multimodal extensions. This work contributes toward expressive, embodied human-robot interaction, with code and models to be released for the community.</p>
+          Some failure cases of our policy reveal that the robot occasionally loses stability, particularly when performing wide arm swings or taking exaggerated steps. These issues are primarily caused by shifts in the center of mass, underscoring the necessity of incorporating balance control mechanisms during dynamic gesture execution. Future directions include personalized gesture adaptation, latency minimization, and extensions to richer multimodal inputs. Overall, this work advances expressive and embodied human-robot interaction, with code and models to be released to the community.</p>
       </div>
     </div>
   </div>
