--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
           <div class="video-grid">
             <div class="video-item">
               <video controls muted loop>
-                <source src="videos/netural_pre.mp4" type="video/mp4">
+                <source src="videos/neutral_pre.mp4" type="video/mp4">
               </video>
               <p class="video-caption">Predefined Gesture</p>
             </div>
