--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <div class="is-size-5 publication-authors" style="margin-top: 1.5rem;">
             <p><strong>Author:</strong> Yanrong Chen</p>
             <p>
-              <a href="mailto:Yanrong.Chen21@student.xjtlu.edu.cn">
+              <a href="mailto:chenyanrong2025@163.com">
                 <span class="icon"><i class="fa fa-envelope"></i></span>
                 Yanrong.Chen21@student.xjtlu.edu.cn
               </a>
